src/test/resources/parser/valid/not.sbsc
assert(!false);

b = false;

assert(!b);

return true;