src/test/resources/parser/invalid/coercion/arithmetic/negativeTuple.sbsc
-(3, "hello");

return false;